<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_gravity="right"
            android:layout_marginRight="16dp"
            app:backgroundTint="@color/blue_900"
            app:srcCompat="@drawable/ic_search_button"
            app:maxImageSize="24dp"
            app:fabSize="mini"
            app:elevation="0dp"
            app:borderWidth="1dp"
            />

    </com.google.android.material.appbar.MaterialToolbar>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/category"
            android:paddingHorizontal="8dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/categorybutton_selector"
                android:button="@android:color/transparent"
                android:fontFamily="@font/tajawal_light"
                android:padding="10dp"
                android:id="@+id/category_whey"
                android:text="@string/whey_protein"
                android:textColor="@drawable/textcategory_color_selector"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/categorybutton_selector"
                android:button="@android:color/transparent"
                android:fontFamily="@font/tajawal_light"
                android:padding="10dp"
                android:id="@+id/category_pre"
                android:text="@string/pre_workout"
                android:textColor="@drawable/textcategory_color_selector"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/categorybutton_selector"
                android:button="@android:color/transparent"
                android:fontFamily="@font/tajawal_light"
                android:padding="10dp"
                android:id="@+id/category_fat"
                android:text="@string/fat_burners"
                android:textColor="@drawable/textcategory_color_selector"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/categorybutton_selector"
                android:button="@android:color/transparent"
                android:fontFamily="@font/tajawal_light"
                android:padding="10dp"
                android:id="@+id/category_mass"
                android:text="@string/mass_gainers"
                android:textColor="@drawable/textcategory_color_selector"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/categorybutton_selector"
                android:button="@android:color/transparent"
                android:fontFamily="@font/tajawal_light"
                android:padding="10dp"
                android:id="@+id/category_prob"
                android:text="@string/probiotics"
                android:textColor="@drawable/textcategory_color_selector"
                android:textSize="18sp" />
        </RadioGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerlist_products_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/product_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>